// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/faq-item should render 1`] = `"<!-- wp:coblocks/faq-item /-->"`;

exports[`coblocks/faq-item should render text color 1`] = `
"<!-- wp:coblocks/faq-item -->
<details class=\\"wp-block-coblocks-faq-item has-333333-color has-text-color\\"><summary class=\\"wp-block-coblocks-faq-item__question\\"><div class=\\"wp-block-coblocks-faq-item__question__content\\">Some question</div></summary><div class=\\"wp-block-coblocks-faq-item__answer\\"></div></details>
<!-- /wp:coblocks/faq-item -->"
`;

exports[`coblocks/faq-item should render with content 1`] = `
"<!-- wp:coblocks/faq-item -->
<details class=\\"wp-block-coblocks-faq-item\\" itemprop=\\"mainEntity\\" itemscope itemtype=\\"https://schema.org/Question\\"><summary class=\\"wp-block-coblocks-faq-item__question\\" itemprop=\\"name\\"><div class=\\"wp-block-coblocks-faq-item__question__content\\">Some question</div></summary><div class=\\"wp-block-coblocks-faq-item__answer\\" itemprop=\\"acceptedAnswer\\" itemscope itemtype=\\"https://schema.org/Answer\\"><div itemprop=\\"text\\"></div></div></details>
<!-- /wp:coblocks/faq-item -->"
`;
